--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -2,11 +2,16 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{article_details.title}} | Reality Notes </title>
-    <link rel="stylesheet" href="../style/article-templates.css">
+    <meta name="description" content="{{article_details.description}}">
+    <meta property="og:title" content="{{article_details.title}}">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="{{article_details.image.url}}">
+    <link rel="stylesheet" href="{% static 'article_detail.css' %}">
     <link rel="stylesheet" href="{% static 'global.css' %}">
     <link rel="stylesheet" href="{% static 'header.css' %}">
     <link rel="stylesheet" href="{% static 'footer.css' %}">
@@ -15,6 +20,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static 'assets/favicon.png' %}" type="image/x-icon">
 </head>
 <body>
     <div class="body">
@@ -34,7 +40,7 @@
                                     <span class="a_hero_tag">
                                         <span class="material-symbols-outlined">label</span>
                                         <span class="a_hero_tag_art__">ARTICLE</span>
-                                    </span>  
+                                    </span>
 
                                     <h1 class="article_title">{{article_details.title}}</h1>
 
@@ -46,7 +52,7 @@
                                             <p class="lc lcc">Link copied!</p>
                                             <p class="page_url lcc"></p>
                                         </div>
-                                    </div>                                    
+                                    </div>
                                 </div>
                             </section>
 
@@ -55,7 +61,7 @@
                                 <div class="a_article_wrap pad_space">
                                     <div class="img_cont">
                                         <img src="{{article_details.image.url}}" alt="{{article_details.image_alt}}" class="article_hero_img">
-                                    </div> 
+                                    </div>
                                     <div>{{article_details.content|safe}}</div>
                                 </div>
                             </section>
@@ -63,13 +69,13 @@
                             <br><br><hr><br><br>
 
                         </div>
-                    </div>                   
+                    </div>
                 </main>
 
                 <footer class="footer" id="footer">
                     {% include 'global/footer.html' %}
                 </footer>
-                
+
             </div>
         </div>
     </div>
