--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                                         <article class="article" id="article">
                                             <div class="article_wrap">
                                                 <a href="/a/{{article.url_hash}}" class="article_title">
-                                                    <h2 class="article_title_h">{{article.title}} and {{article.url_hash}}</h2>
+                                                    <h2 class="article_title_h">{{article.title}}</h2>
                                                 </a>
                                                 <p class="article_desc">{{article.description}}</p>
                                                 <span class="article_msn">
