--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,6 @@
     <link rel="shortcut icon" href="{% static 'assets/favicon.png' %}" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -42,7 +41,10 @@
                                             <h2 class="futr_title_h">{{feat_article.title}}</h2>
                                         </a>
                                         <p class="futr_desc">{{feat_article.description}}</p>
-                                        <p class="futr_time_read">{{feat_article.mins_read}} MIN READ</p>
+                                        <div class="futr_x-info" >
+                                            <span class="tag">{{feat_article.tag}}</span>
+                                            <p class="futr_time_read">{{feat_article.mins_read}}</p>
+                                        </div>
                                     </div>
                                 </article>
                             </div>
@@ -68,8 +70,9 @@
                                                 </a>
                                                 <p class="article_desc">{{article.description}}</p>
                                                 <span class="article_msn">
+                                                    <span class="tag article_tag">{{article.tag}}</span>
                                                     <span class="date">{{article.published_at.date|date:"F Y"}} - </span>
-                                                    <span class="time_read">{{article.mins_read}} MIN READ</span>
+                                                    <span class="time_read">- {{article.mins_read}}</span>
                                                 </span>
                                             </div>
                                         </article>
