--- a/static/footer.css
+++ b/static/footer.css
@@ -10,14 +10,11 @@
     color: var(--gray);
 }
 
-.material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
+.copyright_svg {
+    margin-bottom: -3px;
+    width: 18px;
+    height: 18px;
 }
-
 
 .build_author_ref {
     color: var(--gray);
