--- a/static/global.css
+++ b/static/global.css
@@ -31,6 +31,12 @@ a:hover {
     padding: 20px 20px 45px 20px;
 }
 
+.tag {
+    color: var(--gray);
+    text-transform: uppercase;
+    font-family: inherit;
+}
+
 
 
 @media only screen and (min-width: 800px) {
