Added django index tags

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,10 @@
     <title>Reality Notes</title>
     <meta name="description" content="Sharing life's valuable lessons">
     <meta property="og:title" content="Reality Notes">
+    <meta property="og:site_name" content="Reality Notes">
     <meta property="og:description" content="Sharing life's valuable lessons">
     <meta property="og:url" content="n.realitystevens.me">
+    <meta property="og:image" content="{% static 'assets/og_image.png' %}">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="{% static 'index.css' %}">
     <link rel="stylesheet" href="{% static 'global.css' %}">
