--- a/templates/global/header.html
+++ b/templates/global/header.html
@@ -1,5 +1,5 @@
 <div class="hd_content">
     <div class="hd_wrap">
-        <a href="" class="logo">Reality Notes</a>
+        <a href="{% url 'index' %}" class="logo">Reality Notes</a>
     </div>
 </div>
