--- a/static/footer.css
+++ b/static/footer.css
@@ -1,6 +1,7 @@
 .ft_content {
     padding: 40px 20px 60px 20px;
     text-align: center;
+    background-color: var(--light-gray);
 }
 
 .ft_wrap {
