--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="body">
@@ -73,8 +74,8 @@
                                                 <p class="article_desc">{{article.description}}</p>
                                                 <span class="article_msn">
                                                     <span class="tag article_tag">{{article.tag}}</span>
-                                                    <span class="date">{{article.published_at.date|date:"F Y"}} - </span>
-                                                    <span class="time_read">- {{article.mins_read}}</span>
+                                                    <span class="date">{{article.published_at.date|date:"F Y"}} .- </span>
+                                                    <span class="time_read">. {{article.mins_read}}</span>
                                                 </span>
                                             </div>
                                         </article>
