--- a/static/index.css
+++ b/static/index.css
@@ -1,5 +1,5 @@
 .futr {
-    padding-top: 55px !important;
+    padding-top: 100px !important;
     padding-bottom: 80px !important;
 }
 
@@ -26,6 +26,13 @@
     display: flex;
     align-items: center;
     gap: 2em;
+    font-size: 12px;
+}
+
+.tag {
+    border: 1px solid var(--mid-gray);
+    border-radius: 50px;
+    padding: 10px 15px;
     font-size: 12px;
 }
 
@@ -74,6 +81,7 @@
 .article_msn {
     display: flex;
     font-size: 12px;
+    align-items: center;
 }
 
 .article_tag {
@@ -96,6 +104,7 @@
 
 .about_title {
     font-weight: 600 !important;
+    font-family: 'Sora';
 }
 
 .about_wrap {
