--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="{% static 'assets/favicon.png' %}" type="image/x-icon">
 </head>
 <body>
@@ -37,7 +38,7 @@
                             <section class="a_hero pad_space">
                                 <div class="a_hero_wrap">
                                     <span class="a_hero_tag">
-                                        <span class="material-symbols-outlined">label</span>
+                                        <span class="material-symbols-outlined">article</span>
                                         <span class="a_hero_tag_art__">ARTICLE</span>
                                     </span>
 
