--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -66,8 +66,6 @@
                                 </div>
                             </section>
 
-                            <br><br><hr><br><br>
-
                         </div>
                     </div>
                 </main>
@@ -81,6 +79,7 @@
     </div>
 
     <script src="{% static 'shareBtn.js' %}"></script>
+    <script src="https://kit.fontawesome.com/01187779a7.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
