--- a/templates/index.html
+++ b/templates/index.html
@@ -110,5 +110,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://kit.fontawesome.com/01187779a7.js" crossorigin="anonymous"></script>
+    
 </body>
 </html>
