Update: Changed href content and brand URL

--- a/templates/global/footer.html
+++ b/templates/global/footer.html
@@ -31,7 +31,7 @@
 
         <a class="ft_links_a" href="mailto:hello@realitystevens.me" target="_blank">
             <i class="fa-solid fa-envelope"></i>
-            hello@realitystevens.me
+            me@rstvns.online
         </a>
 
         <div class="final_section">
@@ -44,7 +44,7 @@
                 2023 - 2024.
             </div>
     
-            <div class="build_author">Built by <a href="https://work.realitystevens.me" class="ft_color_change_ref">Reality Stevens</a> using Django. <br> Contribute to project on Github <a href="http://github.com/realitystevens/RealityNotes" target="_blank" rel="noopener noreferrer" class="ft_color_change_ref">here</a>.</div>
+            <div class="build_author">Built by <a href="https://rstvns.online/" class="ft_color_change_ref">Reality Stevens</a> using Django. <br> Contribute to project on Github <a href="http://github.com/realitystevens/RealityNotes" target="_blank" rel="noopener noreferrer" class="ft_color_change_ref">here</a>.</div>
         </div>
 
     </div>
