chore: remove 'active/' route and changed 'feat_article' to 'featured_article'

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,14 +39,14 @@
                             <div class="futr pad_space">
                                 <article class="futr_a">
                                     <div class="futr_acw">
-                                        <span class="futr_tag">FEATURED - {{feat_article.published_at.date|date:"F Y"}}</span>
-                                        <a href="a/{{feat_article.url_hash}}" class="futr_title">
-                                            <h2 class="futr_title_h">{{feat_article.title}}</h2>
+                                        <span class="futr_tag">FEATURED - {{featured_article.published_at.date|date:"F Y"}}</span>
+                                        <a href="a/{{featured_article.url_hash}}" class="futr_title">
+                                            <h2 class="futr_title_h">{{featured_article.title}}</h2>
                                         </a>
-                                        <p class="futr_desc">{{feat_article.description}}</p>
+                                        <p class="futr_desc">{{featured_article.description}}</p>
                                         <div class="futr_x-info" >
-                                            <span class="tag">{{feat_article.tag}}</span>
-                                            <p class="futr_time_read">{{feat_article.mins_read}}</p>
+                                            <span class="tag">{{featured_article.tag}}</span>
+                                            <p class="futr_time_read">{{featured_article.mins_read}}</p>
                                         </div>
                                     </div>
                                 </article>
