--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -1,85 +1,47 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{article_details.title}} | Reality Notes </title>
-    <meta name="description" content="{{article_details.description}}">
-    <meta property="og:title" content="{{article_details.title}}">
-    <meta property="og:type" content="article">
-    <meta property="og:image" content="{{article_details.image.url}}">
-    <link rel="stylesheet" href="{% static 'article_detail.css' %}">
-    <link rel="stylesheet" href="{% static 'global.css' %}">
-    <link rel="stylesheet" href="{% static 'header.css' %}">
-    <link rel="stylesheet" href="{% static 'footer.css' %}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'assets/favicon.png' %}" type="image/x-icon">
-</head>
-<body>
-    <div class="body">
-        <div class="content">
-            <div class="wrapper">
+{% block title %}{{article_details.title}} | Reality Notes{% endblock %}
 
-                <header class="header" id="header">
-                    {% include 'global/header.html' %}
-                </header>
-
-                <main class="main" id="main">
-                    <div class="m_content">
-                        <div class="m_wrap">
-
-                            <section class="a_hero pad_space">
-                                <div class="a_hero_wrap">
-                                    <span class="a_hero_tag">
-                                        <span class="material-symbols-outlined">article</span>
-                                        <span class="a_hero_tag_art__">ARTICLE</span>
-                                    </span>
-
-                                    <h1 class="article_title">{{article_details.title}}</h1>
-
-                                    <p class="aa_det_p">By <span>Reality Stevens</span> / {{article_details.published_at.date|date:"F Y"}}</p>
-
-                                    <div class="share_cont">
-                                        <span class="material-symbols-outlined share_btn">share</span>
-                                        <div class="link_preview">
-                                            <p class="lc lcc">Link copied!</p>
-                                            <p class="page_url lcc"></p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </section>
+{% block head %}
+<meta property="og:type" content="article">
+<meta property="og:title" content="{{article_details.title}}">
+<meta name="description" content="{{article_details.description}}">
+<meta property="og:image" content="{{article_details.image.url}}">
+<link rel="canonical" href="{{request.build_absolute_uri}}">
+<link rel="stylesheet" href="{% static 'article_detail.css' %}">
+{% endblock %}
 
 
-                            <section class="a_article">
-                                <div class="a_article_wrap pad_space">
-                                    <div class="img_cont">
-                                        <img src="{{article_details.image.url}}" alt="{{article_details.image_alt}}" class="article_hero_img">
-                                    </div>
-                                    <div>{{article_details.content|safe}}</div>
-                                </div>
-                            </section>
 
-                        </div>
-                    </div>
-                </main>
+{% block content %}
+<section class="a_hero pad_space">
+    <div class="a_hero_wrap">
+        <span class="a_hero_tag">
+            <span class="material-symbols-outlined">article</span>
+            <span class="a_hero_tag_art__">ARTICLE</span>
+        </span>
 
-                <footer class="footer" id="footer">
-                    {% include 'global/footer.html' %}
-                </footer>
+        <h1 class="article_title">{{article_details.title}}</h1>
 
+        <p class="aa_det_p">By <span>Reality Stevens</span> / {{article_details.published_at.date|date:"F Y"}}</p>
+
+        <div class="share_cont">
+            <span class="material-symbols-outlined share_btn">share</span>
+            <div class="link_preview">
+                <p class="lc lcc">Link copied!</p>
+                <p class="page_url lcc"></p>
             </div>
         </div>
     </div>
+</section>
 
-    <script src="{% static 'shareBtn.js' %}"></script>
-    <script src="https://kit.fontawesome.com/01187779a7.js" crossorigin="anonymous"></script>
-
-</body>
-</html>
+<section class="a_article">
+    <div class="a_article_wrap pad_space">
+        <div class="img_cont">
+            <img src="{{article_details.image.url}}" alt="{{article_details.image_alt}}" class="article_hero_img">
+        </div>
+        <div>{{article_details.content|safe}}</div>
+    </div>
+</section>
+{% endblock %}
